--- a/TouristAssist/app/build.gradle
+++ b/TouristAssist/app/build.gradle
@@ -16,8 +16,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        repositories{
-            maven {url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/'}
+        repositories {
+            maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/' }
         }
     }
 }
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.google.code.ksoap2-android:ksoap2-extra-ntlm:3.5.0'
+    compile 'com.android.support:support-v4:23.3.0'
 }
