--- a/TouristAssist/app/src/main/AndroidManifest.xml
+++ b/TouristAssist/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:name=".MainNavigation"
-            android:label="@string/title_activity_main_navigation"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
