--- a/TouristAssist/app/build.gradle
+++ b/TouristAssist/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.google.code.ksoap2-android:ksoap2-extra-ntlm:3.5.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile files('libs/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
 }
