--- a/TouristAssist/app/build.gradle
+++ b/TouristAssist/app/build.gradle
@@ -10,15 +10,14 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        repositories {
-            maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/' }
-        }
+
     }
 }
 
@@ -27,7 +26,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile 'com.google.code.ksoap2-android:ksoap2-extra-ntlm:3.5.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile files('libs/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
 }
