--- a/TouristAssist/app/src/main/AndroidManifest.xml
+++ b/TouristAssist/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs442.faaltene.touristassist">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +23,10 @@
         <activity
             android:name=".MainNavigation"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Restaurant_detail"
+            android:label="@string/title_activity_restaurant_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
