Restaurant+mall detail added with reviews

--- a/TouristAssist/app/src/main/AndroidManifest.xml
+++ b/TouristAssist/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".Restaurant_detail"
             android:label="@string/title_activity_restaurant_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Mall_detail"
+            android:label="@string/title_activity_mall_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
